tests/NormalTests/paczka1/fuzzy1/53866548.err
Error in line 3: A323 A818 70,1
Error in line 4: A323 A316 37,6
Error in line 16: yAYlPcsiIK A323 6,9
Error in line 11: A323 A323 17,6
Error in line 15: 1REhUxLF9m A316 64,9
Error in line 24: yAYlPcsiIK A323 79,6
Error in line 10: 7hzIRG1Tn A323 90,8
Error in line 21: 1REhUxLF9m A323 36,8
Error in line 19: A323 A818 92,0
